--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@prisma/client": "^6.6.0",
     "@types/better-sqlite3": "^7.6.13",
     "better-sqlite3": "^11.9.1",
