--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@prisma/client": "^6.6.0",
     "@types/better-sqlite3": "^7.6.13",
+    "bcryptjs": "^3.0.2",
     "better-sqlite3": "^11.9.1",
     "next": "15.3.1",
+    "pg": "^8.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/pg": "^8.11.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
