--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^11.9.1",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "pg": "^8.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
