--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
 
-DATABASE_URL=""
+# App Config
+NEXTAUTH_SECRET=
+NEXTAUTH_URL=http://localhost:3000
+
+# Database Configs
+POSTGRES_USER=
+POSTGRES_HOST=
+POSTGRES_DATABASE=
+POSTGRES_PASSWORD=
+POSTGRES_PORT=
