--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "kanban-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,28 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hello-pangea/dnd": "^18.0.1",
-    "@prisma/client": "^6.6.0",
-    "@types/better-sqlite3": "^7.6.13",
-    "bcryptjs": "^3.0.2",
-    "better-sqlite3": "^11.9.1",
     "next": "15.3.1",
-    "next-auth": "^4.24.11",
-    "pg": "^8.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "zod": "^3.24.3"
+    "sass": "^1.87.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/bcryptjs": "^2.4.6",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/pg": "^8.11.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "prisma": "^6.6.0",
+    "reset-css": "^5.0.2",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
