--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
+    "@types/pg": "^8.15.0",
     "next": "15.3.1",
+    "pg": "^8.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.87.0",
-    "reset-css": "^5.0.2"
+    "reset-css": "^5.0.2",
+    "sass": "^1.87.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
