--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@atlaskit/pragmatic-drag-and-drop": "^1.6.1",
+    "@atlaskit/pragmatic-drag-and-drop-flourish": "^2.0.2",
+    "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.0.3",
+    "@atlaskit/pragmatic-drag-and-drop-live-region": "^1.3.0",
+    "@atlaskit/pragmatic-drag-and-drop-react-drop-indicator": "^3.1.0",
     "@headlessui/react": "^2.2.2",
     "@tanstack/react-query": "^5.75.5",
     "@types/pg": "^8.15.0",
@@ -19,6 +24,7 @@
     "reset-css": "^5.0.2",
     "sass": "^1.87.0",
     "swr": "^2.3.3",
+    "tiny-invariant": "^1.3.3",
     "zod": "^3.24.4"
   },
   "devDependencies": {
