--- a/package.json
+++ b/package.json
@@ -17,16 +17,15 @@
     "@atlaskit/pragmatic-drag-and-drop-react-drop-indicator": "^3.1.0",
     "@headlessui/react": "^2.2.2",
     "@tanstack/react-query": "^5.75.5",
+    "@tiptap/pm": "^2.12.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
     "@types/pg": "^8.15.0",
-    "@uiw/react-md-editor": "^4.0.6",
+    "dompurify": "^3.2.6",
     "next": "15.3.1",
     "pg": "^8.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.1.0",
-    "rehype-raw": "^7.0.0",
-    "rehype-sanitize": "^6.0.0",
-    "remark-gfm": "^4.0.1",
     "reset-css": "^5.0.2",
     "sass": "^1.87.0",
     "swr": "^2.3.3",
