--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/pm": "^2.12.0",
     "@tiptap/react": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
+    "@types/dompurify": "^3.0.5",
     "@types/pg": "^8.15.0",
     "dompurify": "^3.2.6",
     "next": "15.3.1",
