--- a/package.json
+++ b/package.json
@@ -15,16 +15,22 @@
     "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.1.0",
     "@atlaskit/pragmatic-drag-and-drop-live-region": "^1.3.0",
     "@atlaskit/pragmatic-drag-and-drop-react-drop-indicator": "^3.1.0",
+    "@auth/prisma-adapter": "^2.9.1",
     "@headlessui/react": "^2.2.2",
+    "@prisma/client": "^6.8.2",
     "@tanstack/react-query": "^5.75.5",
     "@tiptap/pm": "^2.12.0",
     "@tiptap/react": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/dompurify": "^3.0.5",
     "@types/pg": "^8.15.0",
+    "bcryptjs": "^3.0.2",
     "dompurify": "^3.2.6",
     "next": "15.3.1",
+    "next-auth": "^5.0.0-beta.28",
     "pg": "^8.15.6",
+    "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "reset-css": "^5.0.2",
