--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@atlaskit/pragmatic-drag-and-drop-react-drop-indicator": "^3.1.0",
     "@auth/prisma-adapter": "^2.9.1",
     "@headlessui/react": "^2.2.2",
+    "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.8.2",
     "@tanstack/react-query": "^5.75.5",
     "@tiptap/pm": "^2.12.0",
@@ -28,11 +29,12 @@
     "bcryptjs": "^3.0.2",
     "dompurify": "^3.2.6",
     "next": "15.3.1",
-    "next-auth": "^5.0.0-beta.28",
+    "next-auth": "^4.24.11",
     "pg": "^8.15.6",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "reset-css": "^5.0.2",
     "sass": "^1.87.0",
     "swr": "^2.3.3",
