--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "bcryptjs": "^3.0.2",
     "dompurify": "^3.2.6",
     "next": "15.3.1",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.28",
     "pg": "^8.15.6",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
