--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
     "tiny-invariant": "^1.3.3",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "bind-event-listener": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
